# bazel_react_esbuild

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  esbuild-plugin-import.mjs  esbuild.config.mjs  index.html  index.tsx  package.json  styles.module.scss  styles.scss  tsconfig.json
