load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@npm//http-server:index.bzl", "http_server")
load("@npm//sass:index.bzl", "sass")
load("@npm//@bazel/esbuild:index.bzl", "esbuild", "esbuild_config")

sass(
    name = "styles",
    outs = ["styles.css"],
    args = [
        "$(execpath styles.scss)",
        "$(execpath styles.css)",
    ],
    data = ["styles.scss"],
)

ts_project(
    name = "lib",
    supports_workers = True,
    deps = [
        "@npm//@types",
        "@npm//csstype",
    ],
)

esbuild_config(
    name = "esbuild_config",
    config_file = "esbuild.config.mjs",
    deps = [
        "@npm//esbuild-css-modules-plugin",
    ],
)

esbuild(
    name = "bundle",
    entry_point = "index.tsx",
    minify = True,
    config = ":esbuild_config",
    output_dir = True,
    srcs = [
        "index.js",
        "styles.css",
    ],
    deps = [
        ":lib",
        "@npm//:node_modules",
    ],
)

http_server(
    name = "server",
    data = [
        "index.html",
        ":bundle",
    ],
    templated_args = ["."],
)
